--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
     <div class="container">
         <div class="header">
+           
             <h2>Doctor's Visit Payment Receipt</h2>
         </div>
         <div class="patient-info">
@@ -37,6 +38,7 @@
                 <p id="dat">  </p> <!-- Replace with visit date -->
                 <div id="a"></div>
             </div>
+            <img id="logo" src="banner.png" alt="logo" srcset="">
         </div>
     </div>
     <p id="alt"></p>
